2006-05-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am.template
  - Fixed empty line after escaped newline that automake stumbled over
2006-05-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh
  - Use templating script to generate test/Makefile.am as well
 tools/template2mak.py:
  - Don't change directories until after output file has been opened
 tools/*.pl:
  - Got rid of all Perl scripts!
2006-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Use Bart Samwel's templating script to generate all Windows Makefiles
  - Skip Windows Makefile generation scripts if Python not installed
 config/sample-headers/compiler/VisualC++.NET-2003/config-internal-compiler.h:
  - This compiler has vsnprintf(), thanks Bart Samwel
 doc/Doxyfile.in:
  - Disabled collaboration graphs (not of much use to end-users)
 include/pqxx/compiler-public.hxx:
  - Select appropriate libpq/libpqxx binaries in Visual C++ (Bart Samwel)
 include/pqxx/connection_base.hxx, include/pqxx/libpq-forward.hxx,
 src/connection_base.cxx:
  - Fix for nasty bug in notice processor handling (Bart Samwel)
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Made check_displacement() const (Bart Samwel)
  - Removed unnecessary PQXX_LIBEXPORT directives (Bart Samwel)
  - Workaround for disagreement between Visual C++ and g++, thanks Bart Samwel
 src/largeobject.cxx:
  - Fixed "long" return types; should be pos_type
 test/test000.cxx:
  - Visual C++ workaround: no stringstream << operator (Bart Samwel)
 test/test061.cxx:
  - Fixed "unreferenced local variable" warning (Bart Samwel)
 tools/template2mak.py:
  - New (written by Bart Samwel)
  - Generates Visual C++ makefiles from templates
  - Replaces the maketestvcmak.pl and makevcmake.pl scripts
  - Now also replaces makemingwmak.pl
  - Now sorts files in loops
  - Now checks for superfluous arguments
  - Fixed bug in two-argument format (opend output for reading only)
  - Moved "don't edit this file" from templates to script
 win32/common-sample: